2006-06-19  Ian Wienand  <ianw@ieee.org>

	* sysdeps/linux-gnu/mksyscallent: update, fix for ia64
	* sysdeps/linux-gnu/i386/syscallent.h: regenerate to 2.6.17
	* sysdeps/linux-gnu/i386/signalent.h: likewise
	* sysdeps/linux-gnu/arm/syscallent.h: likewise
	* sysdeps/linux-gnu/arm/signalent.h: likewise
	* sysdeps/linux-gnu/m68k/syscallent.h: likewise
	* sysdeps/linux-gnu/m68k/signalent.h: likewise
	* sysdeps/linux-gnu/ia64/syscallent.h: likewise
	* sysdeps/linux-gnu/ia64/signalent.h: likewise

2006-06-19  Heiko Carstens <heiko.carstens@de.ibm.com>

	* sysdeps/linux-gnu/s390/syscalls31.h: update to 2.6.17
	* sysdeps/linux-gnu/s390/syscalls64.h: ditto

2006-06-16  Justin Pryzby <justinpryzby@users.sourceforge.net>

	* ltrace.1: spelling fix
	* TODO: spelling fix

2006-06-14  Ian Wienand  <ianw@gelato.unsw.edu.au>

	* configure.ac: Bump version to 0.5 for Paull Gillam's PPC64
	non-exec PLT patch (as merged below).
	* breakpoints.c: merge
	* elf.c: merge
	* elf.h: merge
	* ltrace.h: merge
	* output.c: merge
	* process_event.c: merge
	* sysdeps/linux-gnu/alpha/plt.c: merge
	* sysdeps/linux-gnu/arm/plt.c: merge
	* sysdeps/linux-gnu/breakpoint.c: merge
	* sysdeps/linux-gnu/i386/plt.c: merge
	* sysdeps/linux-gnu/ia64/plt.c: merge
	* sysdeps/linux-gnu/m68k/plt.c: merge
	* sysdeps/linux-gnu/ppc/arch.h: merge
	* sysdeps/linux-gnu/ppc/arch.h.rej: merge
	* sysdeps/linux-gnu/ppc/plt.c: merge
	* sysdeps/linux-gnu/s390/plt.c: merge
	* sysdeps/linux-gnu/sparc/plt.c: merge
	* sysdeps/linux-gnu/x86_64/plt.c: merge


2006-05-11  Heiko Carstens <heiko.carstens@de.ibm.com>

	* sysdeps/linux-gnu/mksyscallent_s390: add
	* sysdeps/linux-gnu/s390/syscalls31.h: update to 2.6.16
	* sysdeps/linux-gnu/s390/syscalls64.h: ditto

2006-04-24  Paul Gilliam <pgilliam@us.ibm.com>

	* elf.c: Use PLT_REINITALISATION_BP for those architectures that need
	to re-initialize breakpoints after the dynamic linker has run.  Also,
	use value of "e_entry" for address of PLT_REINITALISATION_BP if the