@@ -1,4 +1,9 @@
 ; ltrace.conf
+;
+; ~/.ltrace.conf will also be read, if it exists. The -F option may be
+; used to suppress the automatic inclusion of both this file and
+; ~/.ltrace.conf, and load a different config file or config files
+; instead.
 
 ; Argument types:
 ; +		== May vary (ie, is a returned value) (prefix)
