@@ -31,6 +31,11 @@ struct opt_e_t {
 	struct opt_e_t *next;
 };
 
+struct opt_F_t {
+	char *filename;
+	struct opt_F_t *next;
+};
+
 struct opt_x_t {
 	char *name;
 	int found;
@@ -41,6 +46,8 @@ extern struct opt_p_t *opt_p;	/* attach to process with a given pid */
 
 extern struct opt_e_t *opt_e;	/* list of function names to display */
 extern int opt_e_enable;	/* 0 if '!' is used, 1 otherwise */
+
+extern struct opt_F_t *opt_F;	/* alternate configuration file(s) */
 
 extern struct opt_x_t *opt_x;	/* list of functions to break at */
 
