@@ -1,3 +1,8 @@
+2006-07-16  Steve Fink  <sphink@gmail.com>
+
+	* options.c: implement -F flag for alternate config file(s)
+	* ltrace.c: load SYSCONFDIR/ltrace.conf and ~/.ltrace.conf by default
+
 2006-06-19  Ian Wienand  <ianw@ieee.org>
 
 	* sysdeps/linux-gnu/mksyscallent: update, fix for ia64
